# OurSearchEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/: config.json
src/: CMakeLists.txt
src/backends/: CMakeLists.txt
src/backends/include/: Server.h  ServerCtl.h
src/backends/src/: Server.cpp  ServerCtl.cpp
src/preprocessing/: CMakeLists.txt
src/preprocessing/include/: IndexBuilder.h  LibraryBuilder.h  XMLParser.hpp
src/preprocessing/src/: IndexBuilder.cpp  LibraryBuilder.cpp
src/query/: CMakeLists.txt
src/query/include/: Queryer.h  SearchResultBuilder.h
src/query/src/: Queryer.cpp  SearchResultBuilder.cpp
src/utils/: CMakeLists.txt
src/utils/include/: Datatype.h  DivideCreator.h  Fst.h  SkipList.h  XMLParser.hpp
src/utils/src/: DivideCreator.cpp  SkipList.cpp
test/: CMakeLists.txt  test_benchmark.cpp  test_fst.cpp  test_jieba.cpp  test_jsonbuilder.cpp  test_pre.cpp  test_queryer.cpp  test_server.cpp  test_skiplist.cpp  test_skp_eff.cpp
